# generic-web-crawler

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  client_config.rs  custom_types.rs  errors.rs  headers.rs  logging.rs  main.rs  parser.rs  response_adaptor.rs  scraper_unit.rs  storage.rs
src/scraper_job/: mod.rs  scraper_iterator.rs
